log
Thu 14 Sep 2023 05:16:17 PM UTC: 
 tests:  1|8
total_score: 0/70
c0419ea
Thu 14 Sep 2023 05:26:48 PM UTC: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:73:3: error: unknown type name ‘Tree_Node’; did you mean ‘TreeNode’?
   73 |   Tree_Node* aux = tree->root;
      |   ^~~~~~~~~
      |   TreeNode
treemap.c:73:20: error: initialization of ‘int *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
   73 |   Tree_Node* aux = tree->root;
      |                    ^~~~
treemap.c:76:18: error: request for member ‘key’ in something not a structure or union
   76 |     if(key == aux->key) return aux->dat;
      |                  ^~
treemap.c:76:35: error: request for member ‘dat’ in something not a structure or union
   76 |     if(key == aux->key) return aux->dat;
      |                                   ^~
treemap.c:78:22: error: request for member ‘key’ in something not a structure or union
   78 |     else if(key < aux->key) aux = aux->left;
      |                      ^~
treemap.c:78:38: error: request for member ‘left’ in something not a structure or union
   78 |     else if(key < aux->key) aux = aux->left;
      |                                      ^~
treemap.c:80:20: error: request for member ‘right’ in something not a structure or union
   80 |     else  aux = aux->right;
      |                    ^~
cc1: all warnings being treated as errors
Compilation failed
9689ca7
